# FugueSoftware

./: .gitignore
Configs/: Description.txt  local dotfile versioning.txt
Configs/.ssh/: id_rsa  id_rsa.pub
Configs/Maven-3.5.0/: environmentVars.txt
Configs/Maven-3.5.0/conf/: settings.xml
Configs/Maven-3.5.2/: environmentVars.txt
Configs/Maven-3.5.2/conf/: settings.xml
Configs/Tomcat8_5_27/: TomcatEnvironmentVars.txt
Configs/Tomcat8_5_27/conf/: logging.properties  tomcat-users.xml
Configs/anubis/winnt/system32/dns/etc/: named.conf  named.conf.martinique
Configs/anubis/winnt/system32/dns/etc/named/master/: moonshadow.erehwon  shadowlands.erehwon
Configs/bash/: .bash_profile  ReadMe.txt
Configs/git/: .bash_profile  .gitconfig  .gitk  ReadMe.txt
Configs/git/.config/git/: git-prompt.sh  gitk
Configs/java/: java environment vars.txt
Configs/java/jdk1.8.0_151/jre/lib/security/: java.security
Configs/maven/: environmentSettings.txt
Configs/maven/maven_3.5.0/conf/: settings.xml
Configs/osric/windows/system32/dns/etc/: named.conf  resolv.conf  rndc.key  session.key
Configs/osric/windows/system32/dns/etc/named/: named.ca
Configs/ssh/.ssh/: id_rsa  id_rsa.pub
Configs/thunderbird/AppData/Roaming/Thunderbird/: profiles.ini
day_69_blog_with_users/: forms.py  main.py  package.json  pyproject.toml
day_69_blog_with_users/instance/: blog.db  blog_orig.db
day_69_blog_with_users/static/css/: clean-blog.css
day_69_blog_with_users/templates/: header.html  index.html  login.html  make-post.html  post.html
(+4 files in other folders)
